maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:14: error: value or is not a member of Boolean
     if(getIndication(x,y)==9999 or getIndication(x,y)>n){setIndication(x,y,n)
                                 ^